--- a/frontend/portal-estudiantil-san-ignacio-loyola/package.json
+++ b/frontend/portal-estudiantil-san-ignacio-loyola/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
