--- a/frontend/portal-estudiantil-san-ignacio-loyola/package.json
+++ b/frontend/portal-estudiantil-san-ignacio-loyola/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
